--- a/index.html
+++ b/index.html
@@ -1,74 +1,74 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>MSA Evan Resume</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="style.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </style>
 </head>
-<body class="w3-light-grey">
+<body class="msa-light-grey">
 
 <!-- Page Container -->
-<div class="w3-content w3-margin-top" style="max-width:1400px;">
+<div class="msa-content msa-margin-top" style="max-width:1400px;">
 
   <!-- The Grid -->
-  <div class="w3-row-padding">
+  <div class="msa-row-padding">
   
     <!-- Left Column -->
-    <div class="w3-third">
+    <div class="msa-third">
     
-      <div class="w3-white w3-text-grey w3-card-4">
-        <div class="w3-display-container">
-          <img src="https://scontent.fcgp17-1.fna.fbcdn.net/v/t1.6435-9/105575750_1165832140445830_6513219423917838466_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=174925&_nc_ohc=Uzmd2oi2ZqwAX-SpzNw&tn=Cw8OgUbWRjK8Fxzv&_nc_ht=scontent.fcgp17-1.fna&oh=00_AT8LsS7TUFRE16o0K3Fhod3tLYwXzWKfLuGT_p2sN-Pw3w&oe=624C9092" style="width:100%" alt="Avatar">
-          <div class="w3-display-bottomleft w3-container w3-text-black">
+      <div class="msa-white msa-text-grey msa-card-4">
+        <div class="msa-display-container">
+          <img src="https://scontent.fcgp17-1.fna.fbcdn.net/v/t1.6435-9/105575750_1165832140445830_6513219423917838466_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=174925&_nc_ohc=Uzmd2oi2ZqwAX-SpzNw&tn=Cw8OgUbWRjK8Fxzv&_nc_ht=scontent.fcgp17-1.fna&oh=00_AT8LsS7TUFRE16o0K3Fhod3tLYwXzWKfLuGT_p2sN-Pmsaw&oe=624C9092" style="width:100%" alt="Avatar">
+          <div class="msa-display-bottomleft msa-container msa-text-black">
             <h2>MSA Evan</h2>
           </div>
         </div>
-        <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Student</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Rangpur, Bangladesh</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"> </i><a href="mailto:shahriar@sarc.edu.bd">shahriar@sarc.edu.bd</a></p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>12345678889</p>
+        <div class="msa-container">
+          <p><i class="fa fa-briefcase fa-fw msa-margin-right msa-large msa-text-teal"></i>Student</p>
+          <p><i class="fa fa-home fa-fw msa-margin-right msa-large msa-text-teal"></i>Rangpur, Bangladesh</p>
+          <p><i class="fa fa-envelope fa-fw msa-margin-right msa-large msa-text-teal"> </i><a href="mailto:shahriar@sarc.edu.bd">shahriar@sarc.edu.bd</a></p>
+          <p><i class="fa fa-phone fa-fw msa-margin-right msa-large msa-text-teal"></i>12345678889</p>
           <hr>
 
-          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
+          <p class="msa-large"><b><i class="fa fa-asterisk fa-fw msa-margin-right msa-text-teal"></i>Skills</b></p>
           <p>Adobe Photoshop</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
+          <div class="msa-light-grey msa-round-xlarge msa-small">
+            <div class="msa-container msa-center msa-round-xlarge msa-teal" style="width:90%">90%</div>
           </div>
           <p>Photography</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
-              <div class="w3-center w3-text-white">80%</div>
+          <div class="msa-light-grey msa-round-xlarge msa-small">
+            <div class="msa-container msa-center msa-round-xlarge msa-teal" style="width:80%">
+              <div class="msa-center msa-text-white">80%</div>
             </div>
           </div>
           <p>Illustrator</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
+          <div class="msa-light-grey msa-round-xlarge msa-small">
+            <div class="msa-container msa-center msa-round-xlarge msa-teal" style="width:75%">75%</div>
           </div>
           <p>Media</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+          <div class="msa-light-grey msa-round-xlarge msa-small">
+            <div class="msa-container msa-center msa-round-xlarge msa-teal" style="width:50%">50%</div>
           </div>
           <br>
 
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
+          <p class="msa-large msa-text-theme"><b><i class="fa fa-globe fa-fw msa-margin-right msa-text-teal"></i>Languages</b></p>
           <p>English</p>
-          <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+          <div class="msa-light-grey msa-round-xlarge">
+            <div class="msa-round-xlarge msa-teal" style="height:24px;width:100%"></div>
           </div>
           <p>Spanish</p>
-          <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:55%"></div>
+          <div class="msa-light-grey msa-round-xlarge">
+            <div class="msa-round-xlarge msa-teal" style="height:24px;width:55%"></div>
           </div>
           <p>German</p>
-          <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:25%"></div>
+          <div class="msa-light-grey msa-round-xlarge">
+            <div class="msa-round-xlarge msa-teal" style="height:24px;width:25%"></div>
           </div>
           <br>
         </div>
@@ -78,46 +78,46 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </div>
 
     <!-- Right Column -->
-    <div class="w3-twothird">
+    <div class="msa-twothird">
     
-      <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Lead Organizer / Codecademy Rangpur</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2021 - <span class="w3-tag w3-teal w3-round">Present</span></h6>
+      <div class="msa-container msa-card msa-white msa-margin-bottom">
+        <h2 class="msa-text-grey msa-padding-16"><i class="fa fa-suitcase fa-fw msa-margin-right msa-xxlarge msa-text-teal"></i>Work Experience</h2>
+        <div class="msa-container">
+          <h5 class="msa-opacity"><b>Lead Organizer / Codecademy Rangpur</b></h5>
+          <h6 class="msa-text-teal"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2021 - <span class="msa-tag msa-teal msa-round">Present</span></h6>
           <p>I am the lead organizer for Codecademy Rangpur. Educating newbies and connecting with people to make a strong learning community. Do check our community: <a href="https://community.codecademy.com/rangpur/">Codecademy.com/rangpur/</a></p>
           <hr>
         </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>AngelHack Campus Ambassador</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>August 2021 - <span class="w3-tag w3-teal w3-round">Present</span></h6>
+        <div class="msa-container">
+          <h5 class="msa-opacity"><b>AngelHack Campus Ambassador</b></h5>
+          <h6 class="msa-text-teal"><i class="fa fa-calendar fa-fw msa-margin-right"></i>August 2021 - <span class="msa-tag msa-teal msa-round">Present</span></h6>
           <p>Student Lead for the AngelHack Campus Hub - Government Shah Abdur Rouf College. Engaging with local developers communities to strengthen local ecosystems, bring together passionate individuals, and promote innovation. For more information, visit: <a href="https://angelhack.com">angelhack.com</a></p>
           <hr>
         </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Influnecer Crowdsource by Google</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2020 - <span class="w3-tag w3-teal w3-round">Present</span></h6>
+        <div class="msa-container">
+          <h5 class="msa-opacity"><b>Influnecer Crowdsource by Google</b></h5>
+          <h6 class="msa-text-teal"><i class="fa fa-calendar fa-fw msa-margin-right"></i>July 2020 - <span class="msa-tag msa-teal msa-round">Present</span></h6>
           <p>Joined back in July 2020. Hosting events, Promoting Crowdsource events. Bringing new contributors, Teaching other how to make impact, Help other with their problems. Collaborate with other influencers.</p><br>
         </div>
       </div>
 
-      <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Government Shah Abdur Rouf College</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2019 - 2021</h6>
+      <div class="msa-container msa-card msa-white">
+        <h2 class="msa-text-grey msa-padding-16"><i class="fa fa-certificate fa-fw msa-margin-right msa-xxlarge msa-text-teal"></i>Education</h2>
+        <div class="msa-container">
+          <h5 class="msa-opacity"><b>Government Shah Abdur Rouf College</b></h5>
+          <h6 class="msa-text-teal"><i class="fa fa-calendar fa-fw msa-margin-right"></i>2019 - 2021</h6>
           <p>High School</p>
           <hr>
         </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Pirganj Government High School</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2014 - 2019</h6>
+        <div class="msa-container">
+          <h5 class="msa-opacity"><b>Pirganj Government High School</b></h5>
+          <h6 class="msa-text-teal"><i class="fa fa-calendar fa-fw msa-margin-right"></i>2014 - 2019</h6>
           <p>Junior & Middle School</p>
           <hr>
         </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>New Cambrige International School</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2006 - 2013</h6>
+        <div class="msa-container">
+          <h5 class="msa-opacity"><b>New Cambrige International School</b></h5>
+          <h6 class="msa-text-teal"><i class="fa fa-calendar fa-fw msa-margin-right"></i>2006 - 2013</h6>
           <p>Kintergarden & Primary School</p><br>
         </div>
       </div>
@@ -131,14 +131,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <!-- End Page Container -->
 </div>
 
-<footer class="w3-container w3-teal w3-center w3-margin-top">
+<footer class="msa-container msa-teal msa-center msa-margin-top">
   <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <i class="fa fa-facebook-official msa-hover-opacity"></i>
+  <i class="fa fa-instagram msa-hover-opacity"></i>
+  <i class="fa fa-snapchat msa-hover-opacity"></i>
+  <i class="fa fa-pinterest-p msa-hover-opacity"></i>
+  <i class="fa fa-twitter msa-hover-opacity"></i>
+  <i class="fa fa-linkedin msa-hover-opacity"></i>
   <p>Powered by <a href="https://www.msaevan.com" target="_blank">MSA Evan</a></p>
 </footer>
 
