--- a/index.html
+++ b/index.html
@@ -30,45 +30,45 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="msa-container">
-          <p><i class="fa fa-briefcase fa-fw msa-margin-right msa-large msa-text-teal"></i>Student</p>
-          <p><i class="fa fa-home fa-fw msa-margin-right msa-large msa-text-teal"></i>Rangpur, Bangladesh</p>
-          <p><i class="fa fa-envelope fa-fw msa-margin-right msa-large msa-text-teal"> </i><a href="mailto:shahriar@sarc.edu.bd">shahriar@sarc.edu.bd</a></p>
-          <p><i class="fa fa-phone fa-fw msa-margin-right msa-large msa-text-teal"></i>12345678889</p>
+          <p><i class="fa fa-briefcase fa-fw msa-margin-right msa-large msa-text-blue"></i>Student</p>
+          <p><i class="fa fa-home fa-fw msa-margin-right msa-large msa-text-blue"></i>Rangpur, Bangladesh</p>
+          <p><i class="fa fa-envelope fa-fw msa-margin-right msa-large msa-text-blue"> </i><a href="mailto:shahriar@sarc.edu.bd">shahriar@sarc.edu.bd</a></p>
+          <p><i class="fa fa-phone fa-fw msa-margin-right msa-large msa-text-blue"></i>12345678889</p>
           <hr>
 
-          <p class="msa-large"><b><i class="fa fa-asterisk fa-fw msa-margin-right msa-text-teal"></i>Skills</b></p>
+          <p class="msa-large"><b><i class="fa fa-asterisk fa-fw msa-margin-right msa-text-blue"></i>Skills</b></p>
           <p>Adobe Photoshop</p>
           <div class="msa-light-grey msa-round-xlarge msa-small">
-            <div class="msa-container msa-center msa-round-xlarge msa-teal" style="width:90%">90%</div>
+            <div class="msa-container msa-center msa-round-xlarge msa-blue" style="width:90%">90%</div>
           </div>
           <p>Photography</p>
           <div class="msa-light-grey msa-round-xlarge msa-small">
-            <div class="msa-container msa-center msa-round-xlarge msa-teal" style="width:80%">
+            <div class="msa-container msa-center msa-round-xlarge msa-blue" style="width:80%">
               <div class="msa-center msa-text-white">80%</div>
             </div>
           </div>
           <p>Illustrator</p>
           <div class="msa-light-grey msa-round-xlarge msa-small">
-            <div class="msa-container msa-center msa-round-xlarge msa-teal" style="width:75%">75%</div>
+            <div class="msa-container msa-center msa-round-xlarge msa-blue" style="width:75%">75%</div>
           </div>
           <p>Media</p>
           <div class="msa-light-grey msa-round-xlarge msa-small">
-            <div class="msa-container msa-center msa-round-xlarge msa-teal" style="width:50%">50%</div>
+            <div class="msa-container msa-center msa-round-xlarge msa-blue" style="width:50%">50%</div>
           </div>
           <br>
 
-          <p class="msa-large msa-text-theme"><b><i class="fa fa-globe fa-fw msa-margin-right msa-text-teal"></i>Languages</b></p>
+          <p class="msa-large msa-text-theme"><b><i class="fa fa-globe fa-fw msa-margin-right msa-text-blue"></i>Languages</b></p>
           <p>English</p>
           <div class="msa-light-grey msa-round-xlarge">
-            <div class="msa-round-xlarge msa-teal" style="height:24px;width:100%"></div>
+            <div class="msa-round-xlarge msa-blue" style="height:24px;width:100%"></div>
           </div>
           <p>Spanish</p>
           <div class="msa-light-grey msa-round-xlarge">
-            <div class="msa-round-xlarge msa-teal" style="height:24px;width:55%"></div>
+            <div class="msa-round-xlarge msa-blue" style="height:24px;width:55%"></div>
           </div>
           <p>German</p>
           <div class="msa-light-grey msa-round-xlarge">
-            <div class="msa-round-xlarge msa-teal" style="height:24px;width:25%"></div>
+            <div class="msa-round-xlarge msa-blue" style="height:24px;width:25%"></div>
           </div>
           <br>
         </div>
@@ -81,43 +81,43 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="msa-twothird">
     
       <div class="msa-container msa-card msa-white msa-margin-bottom">
-        <h2 class="msa-text-grey msa-padding-16"><i class="fa fa-suitcase fa-fw msa-margin-right msa-xxlarge msa-text-teal"></i>Work Experience</h2>
+        <h2 class="msa-text-grey msa-padding-16"><i class="fa fa-suitcase fa-fw msa-margin-right msa-xxlarge msa-text-blue"></i>Work Experience</h2>
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Lead Organizer / Codecademy Rangpur</b></h5>
-          <h6 class="msa-text-teal"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2021 - <span class="msa-tag msa-teal msa-round">Present</span></h6>
+          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2021 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
           <p>I am the lead organizer for Codecademy Rangpur. Educating newbies and connecting with people to make a strong learning community. Do check our community: <a href="https://community.codecademy.com/rangpur/">Codecademy.com/rangpur/</a></p>
           <hr>
         </div>
         <div class="msa-container">
           <h5 class="msa-opacity"><b>AngelHack Campus Ambassador</b></h5>
-          <h6 class="msa-text-teal"><i class="fa fa-calendar fa-fw msa-margin-right"></i>August 2021 - <span class="msa-tag msa-teal msa-round">Present</span></h6>
+          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>August 2021 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
           <p>Student Lead for the AngelHack Campus Hub - Government Shah Abdur Rouf College. Engaging with local developers communities to strengthen local ecosystems, bring together passionate individuals, and promote innovation. For more information, visit: <a href="https://angelhack.com">angelhack.com</a></p>
           <hr>
         </div>
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Influnecer Crowdsource by Google</b></h5>
-          <h6 class="msa-text-teal"><i class="fa fa-calendar fa-fw msa-margin-right"></i>July 2020 - <span class="msa-tag msa-teal msa-round">Present</span></h6>
+          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>July 2020 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
           <p>Joined back in July 2020. Hosting events, Promoting Crowdsource events. Bringing new contributors, Teaching other how to make impact, Help other with their problems. Collaborate with other influencers.</p><br>
         </div>
       </div>
 
       <div class="msa-container msa-card msa-white">
-        <h2 class="msa-text-grey msa-padding-16"><i class="fa fa-certificate fa-fw msa-margin-right msa-xxlarge msa-text-teal"></i>Education</h2>
+        <h2 class="msa-text-grey msa-padding-16"><i class="fa fa-certificate fa-fw msa-margin-right msa-xxlarge msa-text-blue"></i>Education</h2>
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Government Shah Abdur Rouf College</b></h5>
-          <h6 class="msa-text-teal"><i class="fa fa-calendar fa-fw msa-margin-right"></i>2019 - 2021</h6>
+          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>2019 - 2021</h6>
           <p>High School</p>
           <hr>
         </div>
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Pirganj Government High School</b></h5>
-          <h6 class="msa-text-teal"><i class="fa fa-calendar fa-fw msa-margin-right"></i>2014 - 2019</h6>
+          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>2014 - 2019</h6>
           <p>Junior & Middle School</p>
           <hr>
         </div>
         <div class="msa-container">
           <h5 class="msa-opacity"><b>New Cambrige International School</b></h5>
-          <h6 class="msa-text-teal"><i class="fa fa-calendar fa-fw msa-margin-right"></i>2006 - 2013</h6>
+          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>2006 - 2013</h6>
           <p>Kintergarden & Primary School</p><br>
         </div>
       </div>
@@ -131,7 +131,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <!-- End Page Container -->
 </div>
 
-<footer class="msa-container msa-teal msa-center msa-margin-top">
+<footer class="msa-container msa-blue msa-center msa-margin-top">
   <p>Find me on social media.</p>
   <i class="fa fa-facebook-official msa-hover-opacity"></i>
   <i class="fa fa-instagram msa-hover-opacity"></i>
