--- a/index.html
+++ b/index.html
@@ -37,38 +37,42 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="msa-large"><b><i class="fa fa-asterisk fa-fw msa-margin-right msa-text-blue"></i>Skills</b></p>
-          <p>Adobe Photoshop</p>
+          <p>Communication</p>
           <div class="msa-light-grey msa-round-xlarge msa-small">
             <div class="msa-container msa-center msa-round-xlarge msa-blue" style="width:90%">90%</div>
           </div>
-          <p>Photography</p>
+          <p>Public Speaking</p>
           <div class="msa-light-grey msa-round-xlarge msa-small">
             <div class="msa-container msa-center msa-round-xlarge msa-blue" style="width:80%">
               <div class="msa-center msa-text-white">80%</div>
             </div>
           </div>
-          <p>Illustrator</p>
+          <p>Leadership</p>
           <div class="msa-light-grey msa-round-xlarge msa-small">
             <div class="msa-container msa-center msa-round-xlarge msa-blue" style="width:75%">75%</div>
           </div>
-          <p>Media</p>
+          <p>Designing</p>
+          <div class="msa-light-grey msa-round-xlarge msa-small">
+            <div class="msa-container msa-center msa-round-xlarge msa-blue" style="width:60%">60%</div>
+          </div>
+          <p>Blogging</p>
           <div class="msa-light-grey msa-round-xlarge msa-small">
             <div class="msa-container msa-center msa-round-xlarge msa-blue" style="width:50%">50%</div>
           </div>
           <br>
 
           <p class="msa-large msa-text-theme"><b><i class="fa fa-globe fa-fw msa-margin-right msa-text-blue"></i>Languages</b></p>
-          <p>English</p>
+          <p>Bangla</p>
           <div class="msa-light-grey msa-round-xlarge">
             <div class="msa-round-xlarge msa-blue" style="height:24px;width:100%"></div>
           </div>
-          <p>Spanish</p>
+          <p>Hindi</p>
           <div class="msa-light-grey msa-round-xlarge">
-            <div class="msa-round-xlarge msa-blue" style="height:24px;width:55%"></div>
+            <div class="msa-round-xlarge msa-blue" style="height:24px;width:75%"></div>
           </div>
-          <p>German</p>
+          <p>English</p>
           <div class="msa-light-grey msa-round-xlarge">
-            <div class="msa-round-xlarge msa-blue" style="height:24px;width:25%"></div>
+            <div class="msa-round-xlarge msa-blue" style="height:24px;width:70%"></div>
           </div>
           <br>
         </div>
@@ -133,12 +137,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="msa-container msa-blue msa-center msa-margin-top">
   <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official msa-hover-opacity"></i>
-  <i class="fa fa-instagram msa-hover-opacity"></i>
-  <i class="fa fa-snapchat msa-hover-opacity"></i>
-  <i class="fa fa-pinterest-p msa-hover-opacity"></i>
-  <i class="fa fa-twitter msa-hover-opacity"></i>
-  <i class="fa fa-linkedin msa-hover-opacity"></i>
+  <a href="https://facebook.com/shahriarazadevan"><i class="fa fa-facebook-official msa-hover-opacity"></i></a>
+  <a herf="https://instagram.com/msaevan101"><i class="fa fa-instagram msa-hover-opacity"></i></a>
+  <a href="https://tumblr.com/msaevan101"><i class="fa fa-tumblr msa-hover-opacity"></i></a>
+  <a href="https://pinterest.com/msaevan101"><i class="fa fa-pinterest-p msa-hover-opacity"></i></a>
+<a href="https://twitter.com/msaevan101"><i class="fa fa-twitter msa-hover-opacity"></i></a>
+<a href=https://linkedin.com/in/msaevan101""><i class="fa fa-linkedin msa-hover-opacity"></i></a>
   <p>Powered by <a href="https://www.msaevan.com" target="_blank">MSA Evan</a></p>
 </footer>
 
