--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="msa-container msa-blue msa-center msa-margin-top">
   <p>Find me on social media.</p>
-  <a href="https://facebook.com/shahriarazadevan"><i class="fa fa-facebook-official msa-hover-opacity"></i></a>
-  <a herf="https://instagram.com/msaevan101"><i class="fa fa-instagram msa-hover-opacity"></i></a>
-  <a href="https://tumblr.com/msaevan101"><i class="fa fa-tumblr msa-hover-opacity"></i></a>
-  <a href="https://pinterest.com/msaevan101"><i class="fa fa-pinterest-p msa-hover-opacity"></i></a>
-<a href="https://twitter.com/msaevan101"><i class="fa fa-twitter msa-hover-opacity"></i></a>
-<a href=https://linkedin.com/in/msaevan101""><i class="fa fa-linkedin msa-hover-opacity"></i></a>
+  <i class="fa fa-facebook-official msa-hover-opacity"><a href="https://facebook.com/shahriarazadevan"></i></a>
+  <i class="fa fa-instagram msa-hover-opacity"><a herf="https://instagram.com/msaevan101"></a></i>
+  <i class="fa fa-tumblr msa-hover-opacity"><a href="https://tumblr.com/msaevan101"></a></i>
+  <i class="fa fa-pinterest-p msa-hover-opacity"><a href="https://pinterest.com/msaevan101"></a></i>
+<i class="fa fa-twitter msa-hover-opacity"><a href="https://twitter.com/msaevan101"></a></i>
+<i class="fa fa-linkedin msa-hover-opacity"><a href="https://linkedin.com/in/msaevan101"></a></i>
   <p>Powered by <a href="https://www.msaevan.com" target="_blank">MSA Evan</a></p>
 </footer>
 
