--- a/index.html
+++ b/index.html
@@ -93,18 +93,29 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="msa-container">
-          <h5 class="msa-opacity"><b>AngelHack Campus Ambassador</b></h5>
+          <h5 class="msa-opacity"><b>Campus Ambassador / AngelHack</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>August 2021 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
           <p>Student Lead for the AngelHack Campus Hub - Government Shah Abdur Rouf College. Engaging with local developers communities to strengthen local ecosystems, bring together passionate individuals, and promote innovation. For more information, visit: <a href="https://angelhack.com">angelhack.com</a></p>
           <hr>
         </div>
         <div class="msa-container">
-          <h5 class="msa-opacity"><b>Influnecer Crowdsource by Google</b></h5>
+          <h5 class="msa-opacity"><b>Influnecer / Crowdsource By Google</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>July 2020 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
           <p>Joined back in July 2020. Hosting events, Promoting Crowdsource events. Bringing new contributors, Teaching other how to make impact, Help other with their problems. Collaborate with other influencers.</p><br>
         </div>
       </div>
-
+        <div class="msa-container">
+          <h5 class="msa-opacity"><b> IT and Media Sub Cordinator / BD Clean Pirganj</b></h5>
+          <h6 class="msa-text-red"><i class="fa fa-calendar fa-fw msa-margin-right"></i>July 2020 - <span class="msa-tag msa-blue msa-round">Former</span></h6>
+          <p>Posting about BD Clean hosted events. Setting up events on Facebook group. Reminding members about event and keeping eye on every member and their socials. Making people aware about cleanliness.</p><br>
+        </div>
+      </div>
+    <div class="msa-container">
+          <h5 class="msa-opacity"><b> Product Expert / Product Expert</b></h5>
+          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>July 2020 - <span class="msa-tag msa-blue msa-round">Former</span></h6>
+          <p>Helping Google Accounts, Android, Assistant, Drive, Gmail, Maps, My Business users with the problems they are having. Answering questions posted on forums. If any bug or glitch is found, escalate questions to get solutions for them.</p><br>
+        </div>
+      </div>
       <div class="msa-container msa-card msa-white">
         <h2 class="msa-text-grey msa-padding-16"><i class="fa fa-certificate fa-fw msa-margin-right msa-xxlarge msa-text-blue"></i>Education</h2>
         <div class="msa-container">
