--- a/index.html
+++ b/index.html
@@ -103,16 +103,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>July 2020 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
           <p>Joined back in July 2020. Hosting events, Promoting Crowdsource events. Bringing new contributors, Teaching other how to make impact, Help other with their problems. Collaborate with other influencers.</p><br>
         </div>
-      </div>
         <div class="msa-container">
           <h5 class="msa-opacity"><b> IT and Media Sub Cordinator / BD Clean Pirganj</b></h5>
-          <h6 class="msa-text-red"><i class="fa fa-calendar fa-fw msa-margin-right"></i>July 2020 - <span class="msa-tag msa-blue msa-round">Former</span></h6>
+          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>December 2019 - <span class="msa-tag msa-red msa-round">Former</span></h6>
           <p>Posting about BD Clean hosted events. Setting up events on Facebook group. Reminding members about event and keeping eye on every member and their socials. Making people aware about cleanliness.</p><br>
         </div>
-      </div>
-    <div class="msa-container">
+        <div class="msa-container">
           <h5 class="msa-opacity"><b> Product Expert / Product Expert</b></h5>
-          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>July 2020 - <span class="msa-tag msa-blue msa-round">Former</span></h6>
+          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2018 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
           <p>Helping Google Accounts, Android, Assistant, Drive, Gmail, Maps, My Business users with the problems they are having. Answering questions posted on forums. If any bug or glitch is found, escalate questions to get solutions for them.</p><br>
         </div>
       </div>
