--- a/index.html
+++ b/index.html
@@ -76,6 +76,24 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <br>
         </div>
+      </div>
+      <br>
+      
+      <p class="msa-large msa-text-theme"><b><i class="fa fa-laptop fa-fw msa-margin-right msa-text-blue"></i>Programming Languages</b></p>
+          <p>HTML</p>
+          <div class="msa-light-grey msa-round-xlarge">
+            <div class="msa-round-xlarge msa-blue" style="height:24px;width:90%"></div>
+          </div>
+          <p>CSS</p>
+          <div class="msa-light-grey msa-round-xlarge">
+            <div class="msa-round-xlarge msa-blue" style="height:24px;width:70%"></div>
+          </div>
+          <p>JavaScript</p>
+          <div class="msa-light-grey msa-round-xlarge">
+            <div class="msa-round-xlarge msa-blue" style="height:24px;width:40%"></div>
+          </div>
+          <br>
+        </div>
       </div><br>
 
     <!-- End Left Column -->
