--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <hr>
         </div>
         <div class="msa-container">
-          <h5 class="msa-opacity"><b> IT and Media Sub Cordinator / BD Clean Pirganj</b></h5>
+          <h5 class="msa-opacity"><b> IT and Media Sub Coordinator / BD Clean Pirganj</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>December 2019 - <span class="msa-tag msa-red msa-round">Former</span></h6>
           <p>Posting about BD Clean hosted events. Setting up events on Facebook group. Reminding members about event and keeping eye on every member and their socials. Making people aware about cleanliness.</p><br>
         <hr>
