--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="msa-display-container">
           <img src="https://scontent.fcgp17-1.fna.fbcdn.net/v/t1.6435-9/105575750_1165832140445830_6513219423917838466_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=174925&_nc_ohc=Uzmd2oi2ZqwAX-SpzNw&tn=Cw8OgUbWRjK8Fxzv&_nc_ht=scontent.fcgp17-1.fna&oh=00_AT8LsS7TUFRE16o0K3Fhod3tLYwXzWKfLuGT_p2sN-Pw3w&oe=624C9092" style="width:100%" alt="Avatar">
           <div class="msa-display-bottomleft msa-container msa-text-black">
-            <h2>MSA Evan</h2>
+            <h2 style="text_color: lightblue;">Shahriar</h2>
           </div>
         </div>
         <div class="msa-container">
           <p><i class="fa fa-briefcase fa-fw msa-margin-right msa-large msa-text-blue"></i>Student</p>
           <p><i class="fa fa-home fa-fw msa-margin-right msa-large msa-text-blue"></i>Rangpur, Bangladesh</p>
           <p><i class="fa fa-envelope fa-fw msa-margin-right msa-large msa-text-blue"> </i><a href="mailto:shahriar@sarc.edu.bd">shahriar@sarc.edu.bd</a></p>
-          <p><i class="fa fa-phone fa-fw msa-margin-right msa-large msa-text-blue"></i>12345678889</p>
+          <p><i class="fa fa-phone fa-fw msa-margin-right msa-large msa-text-blue"></i>12345678910</p>
           <hr>
 
           <p class="msa-large"><b><i class="fa fa-asterisk fa-fw msa-margin-right msa-text-blue"></i>Skills</b></p>
