--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="msa-white msa-text-grey msa-card-4">
         <div class="msa-display-container">
           <img src="https://scontent.fcgp17-1.fna.fbcdn.net/v/t1.6435-9/105575750_1165832140445830_6513219423917838466_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=174925&_nc_ohc=Uzmd2oi2ZqwAX-SpzNw&tn=Cw8OgUbWRjK8Fxzv&_nc_ht=scontent.fcgp17-1.fna&oh=00_AT8LsS7TUFRE16o0K3Fhod3tLYwXzWKfLuGT_p2sN-Pw3w&oe=624C9092" style="width:100%" alt="Avatar">
-          <div class="msa-display-bottomleft msa-container msa-text-black">
-            <h2 style="text_color: lightblue;">Shahriar</h2>
+          <div class="msa-display-bottomleft msa-container msa-text-lightblue">
+            <h2>Shahriar</h2>
           </div>
         </div>
         <div class="msa-container">
