--- a/index.html
+++ b/index.html
@@ -109,25 +109,25 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Lead Organizer / Codecademy Rangpur</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2021 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
-          <p>I am the lead organizer for Codecademy Rangpur. Educating newbies and connecting with people to make a strong learning community. Do check our community: <a href="https://community.codecademy.com/rangpur/">Codecademy.com/rangpur/</a></p>
+          <p>I am the lead organizer for Codecademy Rangpur. My responsibilities are educating newbies and connecting with people to make a strong learning community. Do check our community: <a href="https://community.codecademy.com/rangpur/">Codecademy.com/rangpur/</a></p>
           <hr>
         </div>
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Campus Ambassador / AngelHack</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>August 2021 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
-          <p>Student Lead for the AngelHack Campus Hub - Government Shah Abdur Rouf College. Engaging with local developers communities to strengthen local ecosystems, bring together passionate individuals, and promote innovation. For more information, visit: <a href="https://angelhack.com">angelhack.com</a></p>
+          <p>Student Lead for the AngelHack Campus Hub - Government Shah Abdur Rouf College. Responsibilities are engaging with local developers communities to strengthen local ecosystems, bring together passionate individuals, and promote innovation. For more information, visit: <a href="https://angelhack.com">angelhack.com</a></p>
           <hr>
         </div>
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Influnecer / Crowdsource By Google</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>July 2020 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
-          <p>Joined back in July 2020. Hosting events, Promoting Crowdsource events. Bringing new contributors, Teaching other how to make impact, Help other with their problems. Collaborate with other influencers.</p><br>
+          <p>Becoming an influencer from a contributor, motivation behind was to make my mother language available in every product of Google. Responsibilities are hosting events, promoting Crowdsource events. Bringing new contributors, Teaching others how to make an impact, Helping others with their problems. Collaborating with other influencers cross borders to generate diversity.</p><br>
         <hr>
         </div>
         <div class="msa-container">
           <h5 class="msa-opacity"><b> IT and Media Sub Coordinator / BD Clean Pirganj</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>December 2019 - <span class="msa-tag msa-red msa-round">Former</span></h6>
-          <p>Posting about BD Clean hosted events. Setting up events on Facebook group. Reminding members about event and keeping eye on every member and their socials. Making people aware about cleanliness.</p><br>
+          <p>Taking pictures during events and posting about BD Clean hosted events and Setting up events on Facebook groups. Reminding members about events and keeping an eye on every member and their socials. Making people aware about cleanliness.</p><br>
         <hr>
         </div>
         <div class="msa-container">
