--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="msa-container msa-card msa-white msa-margin-bottom">
         <h2 class="msa-text-grey msa-padding-16"><i class="fa fa-suitcase fa-fw msa-margin-right msa-xxlarge msa-text-blue"></i>Work Experience</h2>
         <div class="msa-container">
-          <h5 class="msa-opacity"><b>Lead Organizer / Codecademy Rangpur</b></h5>
+          <h5 class="msa-opacity"><b>Community Manager / Codecademy Rangpur</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2021 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
-          <p>I am the lead organizer for Codecademy Rangpur. My responsibilities are educating newbies and connecting with people to make a strong learning community. Do check our community: <a href="https://community.codecademy.com/rangpur/">Codecademy.com/rangpur/</a></p>
+          <p>I am the Community Manager for Codecademy Rangpur. My responsibilities are educating newbies and connecting with people to make a strong learning community. Sharing knowledge about the cutting edge and updated technology upadates and resources to the community. Do check our community: <a href="https://community.codecademy.com/rangpur/">Codecademy.com/rangpur/</a></p>
           <hr>
         </div>
         <div class="msa-container">
@@ -126,7 +126,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="msa-container">
           <h5 class="msa-opacity"><b> IT and Media Sub Coordinator / BD Clean Pirganj</b></h5>
-          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>December 2019 - <span class="msa-tag msa-red msa-round">Former</span></h6>
+          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>December 2019 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
           <p>Taking pictures during events and posting about BD Clean hosted events. Setting up events on Facebook groups. Reminding members about events and keeping an eye on every member and their socials. Making people aware about cleanliness.</p><br>
         <hr>
         </div>
