--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Community Manager / Codecademy Rangpur</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2021 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
-          <p>I am the Community Manager for Codecademy Rangpur. My responsibilities are educating newbies and connecting with people to make a strong learning community. Sharing knowledge about the cutting edge and updated technology upadates and resources to the community. Do check our community: <a href="https://community.codecademy.com/rangpur/">Codecademy.com/rangpur/</a></p>
+          <p>I am the Community Manager for Codecademy Rangpur. My responsibilities are educating newbies and connecting with people to make a strong learning community. Sharing knowledge about the cutting edge and updated technology updates and resources with the community. Do check our community: <a href="https://community.codecademy.com/rangpur/">Codecademy.com/rangpur/</a></p>
           <hr>
         </div>
         <div class="msa-container">
@@ -133,7 +133,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="msa-container">
           <h5 class="msa-opacity"><b> Product Expert / Product Expert</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2018 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
-          <p>Helping Google Accounts, Android, Assistant, Drive, Gmail, Maps, My Business users with the problems they are having. Answering questions posted on forums. If any bug or glitch is found, escalate questions to get solutions for them.</p><br>
+          <p>Helping Google Accounts, Android, Assistant, Drive, Gmail, Maps, Youtube and My Business users with the problems they are having. Answering questions posted on forums. If any bug or glitch is found, escalate questions to get solutions for them.</p><br>
         </div>
       </div>
       <div class="msa-container msa-card msa-white">
