--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="msa-container">
           <h5 class="msa-opacity"><b> IT and Media Sub Coordinator / BD Clean Pirganj</b></h5>
-          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>December 2019 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
+          <h6 class="msa-text-red"><i class="fa fa-calendar fa-fw msa-margin-right"></i>December 2019 - <span class="msa-tag msa-blue msa-round">Former</span></h6>
           <p>Taking pictures during events and posting about BD Clean hosted events. Setting up events on Facebook groups. Reminding members about events and keeping an eye on every member and their socials. Making people aware about cleanliness.</p><br>
         <hr>
         </div>
