--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Pirganj Government High School</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>2014 - 2019</h6>
-          <p>Junior & Middle School</p>
+          <p>Junior & Secondary School</p>
           <hr>
         </div>
         <div class="msa-container">
