--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <hr>
         </div>
         <div class="msa-container">
-          <h5 class="msa-opacity"><b> Product Expert / Product Expert</b></h5>
+          <h5 class="msa-opacity"><b> Product Expert / Google</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2018 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
           <p>Helping Google Accounts, Android, Assistant, Drive, Gmail, Maps, Youtube and My Business users with the problems they are having. Answering questions posted on forums. If any bug or glitch is found, escalate questions to get solutions for them.</p><br>
         </div>
@@ -176,7 +176,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <i class="fa fa-twitter msa-hover-opacity"><a href="https://twitter.com/msaevan101"></a></i>
 <i class="fa fa-linkedin msa-hover-opacity"><a href="https://linkedin.com/in/msaevan101"></a></i>
   </div>
-  <p>Powered by <a href="https://www.msaevan.com" target="_blank">MSA Evan</a></p>
+  <p>Powered by <a href="https://msaevan.net" target="_blank">MSA Evan</a></p>
 </footer>
 
 </body>
