--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="msa-white msa-text-grey msa-card-4">
         <div class="msa-display-container">
-          <img src="https://scontent.fdac7-1.fna.fbcdn.net/v/t39.30808-6/296479836_1712093062486399_3948055059831043714_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=ewvYr2WZxf4AX-h_qKO&_nc_ht=scontent.fdac7-1.fna&oh=00_AT_DhOKy2FOd1xXlTGoM4uJHXL9SQVYyfn33_7x_80L2DA&oe=631F0826" style="width:100%" alt="Avatar">
+          <img src="https://msaevan.com/evan.jpg" style="width:100%" alt="Avatar">
           <div class="msa-display-bottomleft msa-container msa-text-white">
             <h2>Shahriar</h2>
           </div>
