--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="msa-white msa-text-grey msa-card-4">
         <div class="msa-display-container">
-          <img src="https://msaevan.com/evan.jpg" style="width:100%" alt="Avatar">
+          <img src="https://scontent.fdac5-1.fna.fbcdn.net/v/t39.30808-6/315911796_1798547150507656_8570333957071376685_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=JTeJySsOWHAAX-qKBSF&_nc_ht=scontent.fdac5-1.fna&oh=00_AfCDXy4LCq0RspRtVyyGenTBC8_KB0XKSZsRJzRnFe5VJg&oe=637D76C9" style="width:100%" alt="Avatar">
           <div class="msa-display-bottomleft msa-container msa-text-white">
             <h2>Shahriar</h2>
           </div>
@@ -114,7 +114,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Campus Ambassador / AngelHack</b></h5>
-          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>August 2021 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
+          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>August 2021 - <span class="msa-tag msa-red msa-round">Former</span></h6>
           <p>Student Lead for the AngelHack Campus Hub - Government Shah Abdur Rouf College. Responsibilities are engaging with local developers communities to strengthen local ecosystems, bring together passionate individuals, and promote innovation. For more information, visit: <a href="https://angelhack.com">angelhack.com</a></p>
           <hr>
         </div>
@@ -133,7 +133,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="msa-container">
           <h5 class="msa-opacity"><b> Product Expert / Google</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2018 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
-          <p>Helping Google Accounts, Android, Assistant, Drive, Gmail, Maps, Youtube and My Business users with the problems they are having. Answering questions posted on forums. If any bug or glitch is found, escalate questions to get solutions for them.</p><br>
+          <p>Helping Google Accounts, Android, Assistant, Drive, Gmail, Maps, Youtube and My Business users with their problems. Answering questions posted on forums. If any bug or glitch is found, escalate questions to get solutions for them.</p><br>
         </div>
       </div>
       <div class="msa-container msa-card msa-white">
