--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="msa-container msa-card msa-white msa-margin-bottom">
         <h2 class="msa-text-grey msa-padding-16"><i class="fa fa-suitcase fa-fw msa-margin-right msa-xxlarge msa-text-blue"></i>Work Experience</h2>
         <div class="msa-container">
+          <h5 class="msa-opacity"><b>Ambassador / Google Developer Group Dhaka</b></h5>
+          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2022 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
+          <p>Being an Ambassador for the GDG Dhaka I am responsible for outreach, promoting events, managing social media and so on things. Apart form that I also look for solutions to grow our community. . Do check our community: <a href="http://gdgdhaka.org">GDGDhaka.Org</a></p>
+          <hr>
+        </div>
+        <div class="msa-container">
           <h5 class="msa-opacity"><b>Community Manager / Codecademy Rangpur</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2021 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
           <p>I am the Community Manager for Codecademy Rangpur. My responsibilities are educating newbies and connecting with people to make a strong learning community. Sharing knowledge about the cutting edge and updated technology updates and resources with the community. Do check our community: <a href="https://community.codecademy.com/rangpur/">Codecademy.com/rangpur/</a></p>
